[WIP] [1/N] androidVoip: ui: prettify and clean up

--- a/androidVoip/src/main/res/values/strings.xml
+++ b/androidVoip/src/main/res/values/strings.xml
@@ -60,8 +60,11 @@
     <string name="no_active_account">У вас не выбран активный аккаунт</string>
 
     <!-- Master Screen -->
-    <string name="caller">Звонки</string>
     <string name="catalog">Каталог</string>
     <string name="profile">Профиль</string>
     <string name="settings">Настройки</string>
+    <string name="dialer">Набор</string>
+    <string name="history">История</string>
+
+    <string name="no_active_account_call">Нет активного аккаунта для совершения звонка</string>
 </resources>
